<resources>
    <string name="app_name">PPM Calculator</string>
    <string name="gender">Gender:</string>
    <string-array name="gender_list">
        <item>Woman</item>
        <item>Man</item>
    </string-array>
    <string name="height">Height [cm]:</string>
    <string name="height_hint">Enter your height</string>
    <string name="weight">Weight [kg]:</string>
    <string name="weight_hint">Enter your weight</string>
    <string name="calculation_way">Calculation formula:</string>
    <string-array name="formula_list">
        <item>Benedict-Harris</item>
        <item>Miffilin</item>
    </string-array>
    <string name="calculate">Calculate</string>
    <string name="birth_date">Provide your birthdate</string>
    <string name="age">Your age: </string>
    <string name="providing_day_of_birth_failure">Wrong day of birth provided, try again</string>
    <string name="providing_data_failure">You didnt provide demanded data</string>
</resources>
